<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eco Track</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="hello_world">Hello world</string>
    <string name="default_web_client_id">740017339386-2vv8gs2kn2vkims04gs5ubhcl0q9qkut.apps.googleusercontent.com</string>

    <string-array name="travel_modes">
        <item>Electrical Bicycle</item>
        <item>Bus/Minibus/Coach</item>
        <item>Train/Metro</item>
        <item>2 Wheeler (alone)</item>
        <item>2 Wheeler (2 passengers)</item>
        <item>Car (alone)</item>
        <item>Car (2 passengers)</item>
        <item>Car (3 passengers)</item>
        <item>Car (4 passengers)</item>
        <item>Flight</item>
        <item>Bicycle</item>
        <item>Did not travel</item>
        <item>Feet! (walking)</item>
    </string-array>

    <string-array name="instead_of_options">
        <item>Car (alone)</item>
        <item>Car (2 passengers)</item>
        <item>Car (3 passengers)</item>
        <item>Car (4 passengers)</item>
        <item>2 Wheeler (alone)</item>
        <item>2 Wheeler (2 passengers)</item>
        <item>Flight</item>
        <item>Bus/Minibus/Coach</item>
        <item>Train/Metro</item>
    </string-array>

    <string-array name="appliance_options">
        <item>Refrigerator</item>
        <item>Clothes Washing and Drying</item>
        <item>Dishwasher</item>
        <item>Cooking: Oven</item>
        <item>Cooking: Stovetop/Cooktop/Hob</item>
        <item>TV</item>
        <item>Fan</item>
    </string-array>

    <string-array name="heating_options">
        <item>Switched of heaters</item>
        <item>Reduced temperature Setting</item>
    </string-array>

    <string-array name="ac_options">
        <item>Switched Off AC</item>
        <item>Increased Temperature Setting</item>
    </string-array>

    <string-array name="water_heating_options">
        <item>Used Less Hot water</item>
        <item>Did not use hot water</item>
        <item>Solar Water Heater</item>
    </string-array>

    <string-array name="lighting_options">
        <item>Switched of light bulbs</item>
        <item>Used LED bulbs</item>
    </string-array>

    <string-array name="category_options">
        <item>Appliances</item>
        <item>Information and Computer Technology</item>
        <item>Clothing and Footwear</item>
        <item>Housing and Furniture</item>
        <item>Waste Disposal</item>
    </string-array>






    <string-array name="appliance_main_options">
        <item>Large Appliance</item>
        <item>Small Appliance</item>
    </string-array>

    <string-array name="appliance_additional_options">
        <item>Postponed Purchase by One Year</item>
        <item>Did Not Purchase</item>
        <item>Repaired Instead of Buying New</item>
    </string-array>

    <string-array name="ict_main_options">
        <item>Mobile Phone</item>
        <item>Laptop</item>
        <item>Tablet</item>
    </string-array>

    <string-array name="clothing_footwear_options">
        <item>Clothing</item>
        <item>Footwear</item>
    </string-array>

    <string-array name="ict_additional_options">
        <item>Extended Use by One Year</item>
        <item>Did Not Upgrade</item>
    </string-array>

    <string-array name="clothing_footwear_additional_options">
        <item>Postponed Purchase by One Year</item>
        <item>Did Not Purchase</item>
    </string-array>

    <string-array name="housing_furniture_options">
        <item>House</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="housing_furniture_additional_options">
        <item>Postponed Purchase by One Year</item>
        <item>Did Not Purchase</item>
    </string-array>

    <string-array name="waste_disposal_options">
        <item>Wet Waste</item>
        <item>Dry Waste</item>
    </string-array>

    <string-array name="empty_options">
        <item></item>
    </string-array>

    <!-- New strings and arrays for WasteActivity -->
    <string name="waste_prompt">Select Waste Type</string>
    <string-array name="waste_categories">
        <item>Wet Waste</item>
        <item>Dry Waste</item>
        <item>Electronic Waste</item>
        <item>Clothes</item>
        <item>Footwear</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="wet_waste_subcategories">
        <item>Composted</item>
        <item>Segregated for Disposal</item>
    </string-array>

    <string-array name="dry_waste_subcategories">
        <item>Ensured Reuse</item>
        <item>Ensured Climate Friendly Disposal</item>
    </string-array>

    <string-array name="electronic_waste_subcategories">
        <item>Refurbished</item>
        <item>Donated</item>
        <item>Ensured Climate Disposal</item>
    </string-array>

    <string-array name="clothes_subcategories">
        <item>Repaired</item>
        <item>Donated</item>
        <item>Ensured Reuse</item>
        <item>Ensured Climate Friendly Disposal</item>
    </string-array>

    <string-array name="footwear_subcategories">
        <item>Ensured Climate Friendly Disposal</item>
        <item>Repaired</item>
    </string-array>

    <string-array name="furniture_subcategories">
        <item>Refurbished</item>
        <item>Donated</item>
        <item>Ensured Climate Disposal</item>
    </string-array>


    <string name="badge_image">Badge Image</string>


</resources>